# Tenpai

./: .gitignore  Cargo.toml  README.md  go.mod  go.sum  pyproject.toml  requirements.txt  taskfile.yaml
data_train/: train.py
docs/cn/: REAMME.md  resnet.md  rule.md  suphx.md
riichi/: Cargo.toml
riichi/cmd/tenhou/: main.go
riichi/internal/pkg/utils/: init.go  logger.go
riichi/src/: main.rs
riichi_train/: __init__.py  train.py
tenhou/: README.md  go.mod  main.go
tenhou-collect/: Cargo.toml  config.example.yaml
tenhou-collect/src/: cmd.rs  flag.rs  main.rs
tenhou-collect/src/cmd/: cli.rs
tenhou/src/catalog/: catalog.go
tenhou/src/cmd/: catalog.go  crawl.go  log.go  root.go
tenhou/src/cmd/catalog/: main.go
tenhou/src/cmd/log/: main.go
tenhou/src/di/: wire.go  wire_gen.go
tenhou/src/service/: catalog.go  log.go
tenhou/src/utils/: config.go  file.go
tenpai/: Cargo.toml
tmp/: Cargo.toml
tmp/src/: main.rs
