[workspace]
members = ["riichi", "tenhou-collect"]

[workspace.package]
name = "Tenpai"
version = "0.1.0"
edition = "2021"
authors = ["gsxhnd"]
homepage = ""
description = ""
repository = "https://github.com/gsxhnd/Tenpai"
license = "MIT license"
categories = [""]
keywords = []
exclude = [".gitignore", ".cargo/config"]
rust-version = "1.68"

[path]
riichi = { path = "riichi" }
tenhou_collect = { path = "tenhou-collect" }

[workspace.dependencies]
clap = { version = "4.3", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tensorflow = { version = "0.21", features = ["tensorflow_gpu"] }
tracing = { version = "0.1" }
tracing-subscriber = "0.3"
