[workspace]
resolver = "2"
# members = ["riichi"]
members = ["tmp"]

[workspace.package]
name = "Tenpai"
version = "0.1.0"
edition = "2021"
authors = ["gsxhnd"]
homepage = ""
description = ""
repository = "https://github.com/gsxhnd/Tenpai"
license = "MIT license"
categories = [""]
keywords = []
exclude = [".gitignore", ".cargo/config"]
rust-version = "1.86"

# [path]
# riichi = { path = "riichi" }

# [workspace.dependencies]
# clap = { version = "4.4", features = ["derive", "env"] }
# serde = { version = "1.0", features = ["derive"] }
# serde_yaml = "0.9"
# tracing = { version = "0.1" }
# tracing-subscriber = "0.3"
